--- a/src/sass/partials/_responsive-sm-min.scss
+++ b/src/sass/partials/_responsive-sm-min.scss
@@ -31,7 +31,7 @@
     }
 
     #services .icons {
-        border-top: 25px solid #ffa64d;
+        border-top: 25px solid $primary-color;
     }
 
     #about-us {
