--- a/views/index.pug
+++ b/views/index.pug
@@ -64,13 +64,13 @@ block content
 	#hero2.intersection
 		.overlay
 			.text
-				span VI SETTER <span style="color: #ffa64d;">IDÈER</span> UT I LIVET.
+				span VI SETTER <span style="color: #f1a32c;">IDÈER</span> UT I LIVET.
 
 	section#grunder
 		.container-fluid
 			.text-block
-				h2.text-header ER DU EN <span style="color: #ffa64d;">GRÜNDER</span>?
-				p.text-content Har du en <span style="color: #ffa64d;">forretnindsidée</span> som du har lyst til å relalisere? Vi hjelper deg!
+				h2.text-header ER DU EN <span style="color: #f1a32c;">GRÜNDER</span>?
+				p.text-content Har du en <span style="color: #f1a32c;">forretnindsidée</span> som du har lyst til å relalisere? Vi hjelper deg!
 			.icons.row
 				.col-md-4.col-sm-4.no-padding
 					.content.toggle-info
@@ -95,14 +95,14 @@ block content
 	#hero3.intersection
 		.overlay
 			.text
-				span Å levere et produkt som kunden er <span style="color: #ffa64d;">100% tilfreds</span> med er vår første <span style="color: #ffa64d;">prioritering</span>.
+				span Å levere et produkt som kunden er <span style="color: #f1a32c;">100% tilfreds</span> med er vår første <span style="color: #f1a32c;">prioritering</span>.
 					
 	section#about-us
 		.container
 			.text-block
 				.row
 					.col-md-2
-						h2.text-header HVEM ER <span style="color: #ffa64d;">VI</span>
+						h2.text-header HVEM ER <span style="color: #f1a32c;">VI</span>
 					.col-md-10
 						p.text-content Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur venenatis quam at urna aliquam, varius blandit massa molestie. 
 							| Aliquam sit amet lacinia ligula. Proin interdum risus arcu, et aliquet risus mattis tincidunt. Duis erat ligula, iaculis eu aliquet non.
@@ -112,7 +112,7 @@ block content
 							| Aliquam sit amet lacinia ligula. Proin interdum risus arcu, et aliquet risus mattis tincidunt. Duis erat ligula, iaculis eu aliquet non.
 	
 	section#projects
-		h2 HVA VI HAR <span style="color: #ffa64d;">JOBBET</span> MED
+		h2 HVA VI HAR <span style="color: #f1a32c;">JOBBET</span> MED
 		.container
 			.row
 				.col-md-6
