--- a/src/sass/partials/_background.scss
+++ b/src/sass/partials/_background.scss
@@ -1,3 +1,12 @@
+@mixin gradient($color1, $color2){
+    background: $color1;
+    background: -webkit-linear-gradient($color1, $color2);
+    background: -o-linear-gradient($color1, $color2);
+    background: -moz-linear-gradient($color1, $color2);
+    background: linear-gradient($color1, $color2);
+
+}
+
 .background-none {
     background: none !important;
 }
@@ -9,11 +18,15 @@
 
     img {
         position: absolute;
-        width: 90%;
+        width: 80%;
         top: 35%;
         left: 0;
         right: 0;
         margin: auto;
+    }
+
+    .overlay {
+        @include gradient(rgba(54, 92, 124,0.8), rgba(54, 92, 124,1));
     }
 }
 
@@ -22,7 +35,6 @@
     @include background-props;
 
     .overlay {
-
         .text {
             padding: 0 20px;
         }
@@ -32,16 +44,12 @@
     
 
 #hero3 {
-    background: url("../images/woman.jpg"); 
+    background: url("../images/knowledge.jpeg"); 
     @include background-props;
 
     .overlay {
-
         .text {
             padding: 0 10px;
-            font-size: 1.6em;
-            font-weight: 100;
-            top: 25%;
         }
     }
 }
@@ -53,7 +61,7 @@
 
 .overlay {
     height: 100%;
-    background-color: rgba(54, 92, 124,0.9);
+    background-color: rgba(54, 92, 124,0.8);
     position: relative;
 
     .text {
@@ -65,12 +73,12 @@
 }
 
 @media (min-width: $screen-sm-min) {
+
     #hero1 {
         img {
-            width: 75%;
+            width: 613px;
         }
     }
-
     #hero2 {
         .text {
             font-size: 2.6em;
@@ -80,7 +88,7 @@
     #hero3 {
         height: 190px;
         .overlay .text {
-            font-size: 2em;
+            font-size: 2.6em;
             padding: 0 50px;
         }
     }
