--- a/src/sass/partials/_mixins.scss
+++ b/src/sass/partials/_mixins.scss
@@ -14,15 +14,38 @@ $transition-duration: 0.4s;
     -moz-transform: translateY($value);
     -o-transform: translateY($value);
     transform: translateY($value);
-} 
+}
+
+@mixin transformX($value) {
+    -webkit-transform: translateX($value);
+    -ms-transform: translateX($value);
+    -moz-transform: translateX($value);
+    -o-transform: translateX($value);
+    transform: translateX($value);
+}  
 
 @mixin transform-transition() {
-
     -webkit-transition: transform $transition-duration;
     -ms-transition: transform $transition-duration;
     -moz-transition: transform $transition-duration;
     -o-transition: transform $transition-duration;
     transition: transform $transition-duration;
+}
+
+@mixin transition($transition){
+    -webkit-transition: $transition $transition-duration;
+    -ms-transition: $transition $transition-duration;
+    -moz-transition: $transition $transition-duration;
+    -o-transition: $transition $transition-duration;
+    transition: $transition $transition-duration;
+}
+
+@mixin multiple-transitions($transition...){
+    -webkit-transition: $transition;
+    -ms-transition: $transition;
+    -moz-transition: $transition;
+    -o-transition: $transition;
+    transition: $transition;
 }
 
 @mixin background-color-transition() {
