--- a/src/sass/partials/_variables.scss
+++ b/src/sass/partials/_variables.scss
@@ -1,3 +1,7 @@
 $primary-color: #ffad33;
+$primary-pale: #ffb84d;
 $main-blue: #365c7c;
 $pale-blue: #51708b;
+$background-color: #FFF;
+
+$transition-duration: 0.4s;
