--- a/views/index.pug
+++ b/views/index.pug
@@ -64,12 +64,12 @@ block content
 	#hero2.intersection
 		.overlay
 			.text
-				span VI SETTER <span style="color: #f1a32c;">IDÈER</span> UT I LIVET.
+				span VI SETTER <span style="color: #f1a32c;">IDÉER</span> UT I <span style="color: #f1a32c;">LIVET.</span>
 
 	section#grunder
 		.container-fluid
 			.text-block
-				h2.text-header ER DU EN <span style="color: #f1a32c;">GRÜNDER</span>?
+				h2.text-header Er du en <span style="color: #f1a32c;">gründer</span>?
 				p.text-content Har du en <span style="color: #f1a32c;">forretnindsidée</span> som du har lyst til å relalisere? Vi hjelper deg!
 			.icons.row
 				.col-md-4.col-sm-4.no-padding
@@ -95,8 +95,7 @@ block content
 	#hero3.intersection
 		.overlay
 			.text
-				span Å levere et produkt som kunden er <span style="color: #f1a32c;">100% tilfreds</span> med er vår første <span style="color: #f1a32c;">prioritering</span>.
-					
+				span Du har <span style="color: #f1a32c;">idéene</span> - vi har <span style="color: #f1a32c;">kunnskapene.</span>
 	section#about-us
 		.container
 			.text-block
