--- a/views/layouts/navbar.pug
+++ b/views/layouts/navbar.pug
@@ -1,8 +1,11 @@
-#navigation
-	.button_container#toggle
-		span.top
-		span.middle
-		span.bottom
+nav#navigation(class=["navbar", "navbar-default", "navbar-fixed-top"] data-spy="affix" data-offset-top="200")
+	.container 
+		img.brand(src="images/logo-final-optimized.svg")
+		.button_container#toggle
+			span.top
+			span.middle
+			span.bottom
+			.button-text MENU
 
 	.nav-overlay#nav-overlay
 		nav.overlay-menu
