--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -3653,7 +3653,7 @@ tbody.collapse.in {
 
 .navbar {
   position: relative;
-  min-height: 70px;
+  min-height: 60px;
   margin-bottom: 20px;
   border: 1px solid transparent; }
   .navbar:before, .navbar:after {
@@ -3759,10 +3759,10 @@ tbody.collapse.in {
 
 .navbar-brand {
   float: left;
-  padding: 25px 15px;
+  padding: 20px 15px;
   font-size: 18px;
   line-height: 20px;
-  height: 70px; }
+  height: 60px; }
   .navbar-brand:hover, .navbar-brand:focus {
     text-decoration: none; }
   .navbar-brand > img {
@@ -3777,8 +3777,8 @@ tbody.collapse.in {
   float: right;
   margin-right: 15px;
   padding: 9px 10px;
-  margin-top: 18px;
-  margin-bottom: 18px;
+  margin-top: 13px;
+  margin-bottom: 13px;
   background-color: transparent;
   background-image: none;
   border: 1px solid transparent;
@@ -3797,7 +3797,7 @@ tbody.collapse.in {
       display: none; } }
 
 .navbar-nav {
-  margin: 12.5px -15px; }
+  margin: 10px -15px; }
   .navbar-nav > li > a {
     padding-top: 10px;
     padding-bottom: 10px;
@@ -3825,8 +3825,8 @@ tbody.collapse.in {
       .navbar-nav > li {
         float: left; }
         .navbar-nav > li > a {
-          padding-top: 25px;
-          padding-bottom: 25px; } }
+          padding-top: 20px;
+          padding-bottom: 20px; } }
 
 .navbar-form {
   margin-left: -15px;
@@ -3836,8 +3836,8 @@ tbody.collapse.in {
   border-bottom: 1px solid transparent;
   -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1);
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1);
-  margin-top: 18px;
-  margin-bottom: 18px; }
+  margin-top: 13px;
+  margin-bottom: 13px; }
   @media (min-width: 768px) {
     .navbar-form .form-group {
       display: inline-block;
@@ -3905,18 +3905,18 @@ tbody.collapse.in {
   border-bottom-left-radius: 0; }
 
 .navbar-btn {
-  margin-top: 18px;
-  margin-bottom: 18px; }
+  margin-top: 13px;
+  margin-bottom: 13px; }
   .navbar-btn.btn-sm, .btn-group-sm > .navbar-btn.btn {
-    margin-top: 20px;
-    margin-bottom: 20px; }
+    margin-top: 15px;
+    margin-bottom: 15px; }
   .navbar-btn.btn-xs, .btn-group-xs > .navbar-btn.btn {
-    margin-top: 24px;
-    margin-bottom: 24px; }
+    margin-top: 19px;
+    margin-bottom: 19px; }
 
 .navbar-text {
-  margin-top: 25px;
-  margin-bottom: 25px; }
+  margin-top: 20px;
+  margin-bottom: 20px; }
   @media (min-width: 9000px) {
     .navbar-text {
       float: left;
@@ -5815,7 +5815,8 @@ button.close {
     display: none !important; } }
 
 body {
-  font-family: 'open-sans', sans-serif; }
+  font-family: 'open-sans', sans-serif;
+  background-color: #FFF; }
   body h2 {
     text-align: center;
     font-size: 1.5em;
@@ -5833,7 +5834,7 @@ body {
     height: 320px;
     position: relative;
     overflow: hidden;
-    background-color: #fff;
+    background-color: #FFF;
     -webkit-transition: background-color 0.4s;
     -ms-transition: background-color 0.4s;
     -moz-transition: background-color 0.4s;
@@ -5993,106 +5994,164 @@ body {
   margin-left: auto;
   margin-right: auto; }
 
-#navigation .button_container {
-  position: fixed;
-  top: 5%;
-  right: 2%;
-  height: 27px;
-  width: 35px;
-  cursor: pointer;
-  z-index: 1010;
-  transition: opacity .25s ease; }
-  #navigation .button_container:hover {
-    opacity: .7; }
-  #navigation .button_container.active .top {
-    transform: translateY(11px) translateX(0) rotate(45deg);
-    background: #FFF; }
-  #navigation .button_container.active .middle {
+#navigation.affix {
+  background-color: rgba(255, 255, 255, 0.9); }
+  #navigation.affix .brand {
+    opacity: 1;
+    -webkit-transform: translateX(0%);
+    -ms-transform: translateX(0%);
+    -moz-transform: translateX(0%);
+    -o-transform: translateX(0%);
+    transform: translateX(0%); }
+    #navigation.affix .brand::after {
+      opacity: 1; }
+
+#navigation {
+  background-color: transparent;
+  -webkit-transition: background-color 0.4s;
+  -ms-transition: background-color 0.4s;
+  -moz-transition: background-color 0.4s;
+  -o-transition: background-color 0.4s;
+  transition: background-color 0.4s;
+  border: none; }
+  #navigation .brand {
+    position: fixed;
+    width: 150px;
+    top: 20px;
+    left: 5%;
+    font-size: 25px;
+    color: #ffad33;
     opacity: 0;
-    background: #FFF; }
-  #navigation .button_container.active .bottom {
-    transform: translateY(-11px) translateX(0) rotate(-45deg);
-    background: #FFF; }
-  #navigation .button_container span {
-    background: #404040;
-    border: none;
-    height: 5px;
-    width: 100%;
-    position: absolute;
+    -webkit-transform: translateX(20%);
+    -ms-transform: translateX(20%);
+    -moz-transform: translateX(20%);
+    -o-transform: translateX(20%);
+    transform: translateX(20%);
+    -webkit-transition: transform 0.4s, opacity 0.4s;
+    -ms-transition: transform 0.4s, opacity 0.4s;
+    -moz-transition: transform 0.4s, opacity 0.4s;
+    -o-transition: transform 0.4s, opacity 0.4s;
+    transition: transform 0.4s, opacity 0.4s; }
+    #navigation .brand::after {
+      content: "";
+      width: 56px;
+      border-bottom: 3px solid #fff;
+      position: absolute;
+      top: 15px;
+      left: 35px;
+      opacity: 0;
+      -webkit-transition: opacity 0.4s;
+      -ms-transition: opacity 0.4s;
+      -moz-transition: opacity 0.4s;
+      -o-transition: opacity 0.4s;
+      transition: opacity 0.4s; }
+  #navigation .button_container {
+    position: fixed;
+    top: 20px;
+    right: 2%;
+    height: 27px;
+    width: 27px;
+    cursor: pointer;
+    z-index: 1010;
+    transition: opacity .25s ease; }
+    #navigation .button_container .button-text {
+      position: absolute;
+      z-index: 1010;
+      right: 150%;
+      font-size: 1.2em;
+      color: #404040;
+      transition: color .25s ease; }
+    #navigation .button_container:hover {
+      opacity: .7; }
+    #navigation .button_container.active .top {
+      transform: translateY(9px) translateX(0) rotate(45deg);
+      background: #FFF; }
+    #navigation .button_container.active .middle {
+      opacity: 0;
+      background: #FFF; }
+    #navigation .button_container.active .bottom {
+      transform: translateY(-9px) translateX(0) rotate(-45deg);
+      background: #FFF; }
+    #navigation .button_container span {
+      background: #404040;
+      border: none;
+      border-radius: 20px;
+      height: 3px;
+      width: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      transition: all .35s ease;
+      cursor: pointer; }
+      #navigation .button_container span:nth-of-type(2) {
+        top: 9px; }
+      #navigation .button_container span:nth-of-type(3) {
+        top: 18px; }
+  #navigation .nav-overlay {
+    position: fixed;
+    background: #51708b;
     top: 0;
     left: 0;
-    transition: all .35s ease;
-    cursor: pointer; }
-    #navigation .button_container span:nth-of-type(2) {
-      top: 11px; }
-    #navigation .button_container span:nth-of-type(3) {
-      top: 22px; }
-
-#navigation .nav-overlay {
-  position: fixed;
-  background: #51708b;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 0%;
-  opacity: 0;
-  visibility: hidden;
-  transition: opacity .35s, visibility .35s, height .35s;
-  overflow: hidden;
-  z-index: 1000; }
-  #navigation .nav-overlay.open {
-    opacity: .9;
-    visibility: visible;
-    height: 100%; }
-    #navigation .nav-overlay.open li {
-      animation: fadeInRight .5s ease forwards;
-      animation-delay: .35s; }
-      #navigation .nav-overlay.open li:nth-of-type(2) {
-        animation-delay: .4s; }
-      #navigation .nav-overlay.open li:nth-of-type(3) {
-        animation-delay: .45s; }
-      #navigation .nav-overlay.open li:nth-of-type(4) {
-        animation-delay: .50s; }
-  #navigation .nav-overlay nav {
-    position: relative;
-    height: 70%;
-    top: 50%;
-    transform: translateY(-50%);
-    font-size: 50px;
-    font-weight: 400;
-    text-align: center; }
-  #navigation .nav-overlay ul {
-    list-style: none;
-    padding: 0;
-    margin: 0 auto;
-    display: inline-block;
-    position: relative;
-    height: 100%; }
-    #navigation .nav-overlay ul li {
-      display: block;
-      height: 25%;
-      height: calc(100% / 4);
-      min-height: 50px;
+    width: 100%;
+    height: 0%;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity .35s, visibility .35s, height .35s;
+    overflow: hidden;
+    z-index: 1000; }
+    #navigation .nav-overlay.open {
+      opacity: .9;
+      visibility: visible;
+      height: 100%; }
+      #navigation .nav-overlay.open li {
+        animation: fadeInRight .5s ease forwards;
+        animation-delay: .35s; }
+        #navigation .nav-overlay.open li:nth-of-type(2) {
+          animation-delay: .4s; }
+        #navigation .nav-overlay.open li:nth-of-type(3) {
+          animation-delay: .45s; }
+        #navigation .nav-overlay.open li:nth-of-type(4) {
+          animation-delay: .50s; }
+    #navigation .nav-overlay nav {
       position: relative;
-      opacity: 0; }
-      #navigation .nav-overlay ul li a {
+      height: 70%;
+      top: 50%;
+      transform: translateY(-50%);
+      font-size: 50px;
+      font-weight: 400;
+      text-align: center; }
+    #navigation .nav-overlay ul {
+      list-style: none;
+      padding: 0;
+      margin: 0 auto;
+      display: inline-block;
+      position: relative;
+      height: 100%; }
+      #navigation .nav-overlay ul li {
         display: block;
+        height: 25%;
+        height: calc(100% / 4);
+        min-height: 50px;
         position: relative;
-        color: #FFF;
-        text-decoration: none;
-        overflow: hidden; }
-        #navigation .nav-overlay ul li a:hover:after, #navigation .nav-overlay ul li a:focus:after, #navigation .nav-overlay ul li a:active:after {
-          width: 100%; }
-        #navigation .nav-overlay ul li a:after {
-          content: '';
-          position: absolute;
-          bottom: 0;
-          left: 50%;
-          width: 0%;
-          transform: translateX(-50%);
-          height: 3px;
-          background: #FFF;
-          transition: .35s; }
+        opacity: 0; }
+        #navigation .nav-overlay ul li a {
+          display: block;
+          position: relative;
+          color: #FFF;
+          text-decoration: none;
+          overflow: hidden; }
+          #navigation .nav-overlay ul li a:hover:after, #navigation .nav-overlay ul li a:focus:after, #navigation .nav-overlay ul li a:active:after {
+            width: 100%; }
+          #navigation .nav-overlay ul li a:after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            width: 0%;
+            transform: translateX(-50%);
+            height: 3px;
+            background: #FFF;
+            transition: .35s; }
 
 @keyframes fadeInRight {
   0% {
@@ -6311,11 +6370,17 @@ body {
   height: 90vh; }
   #hero1 img {
     position: absolute;
-    width: 90%;
+    width: 80%;
     top: 35%;
     left: 0;
     right: 0;
     margin: auto; }
+  #hero1 .overlay {
+    background: rgba(54, 92, 124, 0.8);
+    background: -webkit-linear-gradient(rgba(54, 92, 124, 0.8), #365c7c);
+    background: -o-linear-gradient(rgba(54, 92, 124, 0.8), #365c7c);
+    background: -moz-linear-gradient(rgba(54, 92, 124, 0.8), #365c7c);
+    background: linear-gradient(rgba(54, 92, 124, 0.8), #365c7c); }
 
 #hero2 {
   background: url("../images/idea.jpg");
@@ -6326,15 +6391,12 @@ body {
     padding: 0 20px; }
 
 #hero3 {
-  background: url("../images/woman.jpg");
+  background: url("../images/knowledge.jpeg");
   background-size: cover;
   background-position: center center;
   background-attachment: fixed; }
   #hero3 .overlay .text {
-    padding: 0 10px;
-    font-size: 1.6em;
-    font-weight: 100;
-    top: 25%; }
+    padding: 0 10px; }
 
 .background {
   position: relative;
@@ -6342,7 +6404,7 @@ body {
 
 .overlay {
   height: 100%;
-  background-color: rgba(54, 92, 124, 0.9);
+  background-color: rgba(54, 92, 124, 0.8);
   position: relative; }
   .overlay .text {
     position: absolute;
@@ -6352,13 +6414,13 @@ body {
 
 @media (min-width: 768px) {
   #hero1 img {
-    width: 75%; }
+    width: 613px; }
   #hero2 .text {
     font-size: 2.6em; }
   #hero3 {
     height: 190px; }
     #hero3 .overlay .text {
-      font-size: 2em;
+      font-size: 2.6em;
       padding: 0 50px; } }
 
 @media (min-width: 768px) {
@@ -6377,21 +6439,19 @@ body {
   #grunder .icons, .icons {
     padding: 0; }
   #services .icons {
-    border-top: 25px solid #ffad33; }
+    border-top: 15px solid #ffad33; }
   #about-us {
     margin: 30px 0 0; }
     #about-us .text-block .text-content {
       padding: 100px 15px 80px; } }
 
 @media (min-width: 1200px) {
-  #hero1 img {
-    max-width: 650px; }
   #hero2 .text {
     font-size: 3.3em; }
   #hero3 {
     height: 250px; }
     #hero3 .overlay .text {
-      font-size: 2.8em; }
+      font-size: 3.3em; }
   .intersection {
     height: 250px;
     text-align: center;
