--- a/views/layouts/footer.pug
+++ b/views/layouts/footer.pug
@@ -8,4 +8,4 @@ footer.footer
                 li: a(href="http://www.linkedin.com"): img(src="icons/linkedin.svg")
                 //li: a(href="http://www.facebook.com"): img(src="icons/snapchat.svg")
         .copyright
-            span &copy; 2017 RAINTECH ANDRIANA ENK.
+            span &copy; 2017 RAINTECH
