--- a/src/sass/partials/_default.scss
+++ b/src/sass/partials/_default.scss
@@ -94,9 +94,36 @@ body {
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
         margin-bottom: 30px;
         max-width: 555px;
+        position: relative;
 
         img {
             width: 100%;
+        }
+
+        .overlay {
+            width: 100%;
+            background-color: rgba(0, 0, 0, 0.0);
+            position: absolute;
+            @include background-color-transition();
+
+            .overlay-text {
+                text-align: center;
+                font-size: 3.5em;
+                color: $primary-color;
+                opacity: 0;
+                padding-top: 20%;
+                @include transition(opacity);
+            }
+        }
+
+        &:hover {
+            .overlay {
+                background-color: rgba(0, 0, 0, 0.8);
+
+                .overlay-text {
+                    opacity: 1;
+                } 
+            }
         }
     }
 }
