--- a/views/includes/head.pug
+++ b/views/includes/head.pug
@@ -4,5 +4,7 @@ head
     meta(name="viewport" content="width=device-width, initial-scale=1")
 
     title Raintech
+    // scroll reveal must load ealy */
+    script(type="text/javascript" src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js")
     link(rel="stylesheet" href="stylesheets/styles.css")
     link(href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet")
