--- a/views/includes/head.pug
+++ b/views/includes/head.pug
@@ -3,7 +3,7 @@ head
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1")
 
-    title Raintech
+    title Raintech - Utvikling av web- og mobile løsninger
     // scroll reveal must load ealy */
     script(type="text/javascript" src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js")
     link(rel="stylesheet" href="stylesheets/styles.css")
