--- a/views/layouts/footer.pug
+++ b/views/layouts/footer.pug
@@ -3,7 +3,7 @@ footer.footer
         span.text Følg oss i sosiale medier
         .social-media
             ul
-                li: a(href="http://www.facebook.com"): img(src="icons/facebook.svg")
+                li: a(href="http://www.facebook.com/raintechnorway"): img(src="icons/facebook.svg")
                 li: a(href="http://www.instagram.com"): img(src="icons/instagram.svg")
                 li: a(href="http://www.linkedin.com"): img(src="icons/linkedin.svg")
                 //li: a(href="http://www.facebook.com"): img(src="icons/snapchat.svg")
