--- a/views/index.pug
+++ b/views/index.pug
@@ -20,19 +20,19 @@ block content
 							.inner
 								.mac-icon
 								span WEBUTVIKLING
-							span.toggle En webside er idag et av de viktigste... Vi hjelpe deg med å lage en god og informativ webside til din bedrift.
+							span.toggle En webside er idag et av de viktigste verktøyene for å markedsføre din virksomhet. Vi hjelper deg med å lage en god og informativ webside til din bedrift.
 					.col-md-3.col-sm-6.no-padding
 						.content.toggle-info
 							.inner
 								.design-icon
 								span DESIGN
-							span.toggle Shaping a creative identity, rich and versatile. Enhance your corporate image. that leave an impression
+							span.toggle Vi er opptatt av detaljer, og vi legger stor vekt på design og estetikk. Det er viktig at en webside ser bra ut for å tiltrekke seg flest mulig kunder.
 					.col-md-3.col-sm-6.no-padding
 						.content.toggle-info
 							.inner
 								.system-icon
 								span WEBAPPLIKASJONER
-							span.toggle Shaping a creative identity, rich and versatile. Enhance your corporate image.
+							span.toggle I tillegg til websider påtar vi oss også større utviklingsprosjekter. Webapplikasjoner er websider som har noe mer funksjon enn bare informasjon.
 					
 				.row
 					.col-md-3.col-sm-6.no-padding
@@ -40,7 +40,7 @@ block content
 							.inner
 								.search-icon
 								span SEO
-							span.toggle Vi hjelper deg med å lage en MVP/prototype til produktet ditt. Med det kan du teste konseptet i markedet før du går videre med utviklingen.
+							span.toggle Vi søkemotoroptimaliserer websiden din, slik at du oppnår høyerer rangering på Google og andre søkemotorer. 
 
 					.col-md-3.col-sm-6.no-padding
 						.content.toggle-info
@@ -53,13 +53,13 @@ block content
 							.inner
 								.responsive-icon
 								span RESPONSIVT DESIGN
-							span.toggle Shaping a creative identity, rich and versatile. Enhance your corporate image.
+							span.toggle En responsiv webside er en side som tilpasser seg automatisk etter skjermstørrelsen, slik at den ser og føles kjent ut uansett enhet.
 					.col-md-3.col-sm-6.no-padding
 						.content.toggle-info
 							.inner
 								.tool-icon
 								span KVALITET
-							span.toggle Shaping a creative identity, rich and versatile. Enhance your corporate image.
+							span.toggle Vi gjør alltid vårt ytterste for å levere et produkt med høy kvalitet. I utvikle noe som gir verdi for kunden er noe vi setter høyt er i Raintech.
 
 	#hero2.intersection
 		.overlay
@@ -70,7 +70,7 @@ block content
 		.container-fluid
 			.text-block
 				h2.text-header Er du en <span style="color: #f1a32c;">gründer</span>?
-				p.text-content Har du en <span style="color: #f1a32c;">forretnindsidée</span> som du har lyst til å relalisere? Vi hjelper deg!
+				p.text-content Har du en <span style="color: #f1a32c;">forretnindsidée</span> som du har lyst til å realisere? Vi hjelper deg!
 			.icons.row
 				.col-md-4.col-sm-4.no-padding
 					.content.toggle-info
@@ -84,13 +84,13 @@ block content
 						.inner
 							.price-icon
 							span GRÜNDERVENNLIG PRIS
-						span.toggle Vi vet at gründere ikke er de med best råd. Vi har derfor en gründervennlig pris som gjør at du kan investere pengene videre i produktet.
+						span.toggle Vi vet at gründere ikke er de med best råd. Vi har derfor en gründervennlig pris som gjør at du kan investere pengene videre i selskapet.
 				.col-md-4.col-sm-4.no-padding
 					.content.toggle-info
 						.inner
 							.clock-icon
-							span LEVERINGSTID
-						span.toggle En av de store fordelene med å lage MVP er 
+							span VIDEREUTVIKLING
+						span.toggle Har du testet konseptet i markedet og har lyst til å videreutvikle prototypen? Ta kontakt så får vi diskutert veien videre. Vi bistår med både det tekniske og det visuellet rundt konseptet.
 
 	#hero3.intersection
 		.overlay
@@ -103,12 +103,14 @@ block content
 					.col-md-2
 						h2.text-header HVEM ER <span style="color: #f1a32c;">VI.</span>
 					.col-md-10
-						p.text-content Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur venenatis quam at urna aliquam, varius blandit massa molestie. 
-							| Aliquam sit amet lacinia ligula. Proin interdum risus arcu, et aliquet risus mattis tincidunt. Duis erat ligula, iaculis eu aliquet non.
+						p.text-content Raintech er et nyetablert mobil- og webutviklingsbyrå som ble startet tidlig 2017 av Rina Andriana. Han fungerer som daglig leder og står samtidig for 
+							| all utvikling i bedriften.
+							|Vi jobber for å skape løsninger og produkter som gir verdi for kundene våre. For oss er det viktig at kundene får den kvaliteten de forventer.
 							br
 							br
-							| Aliquam sit amet lacinia ligula. Proin interdum risus arcu, et aliquet risus mattis tincidunt. Duis erat ligula, iaculis eu aliquet non.
-							| Aliquam sit amet lacinia ligula. Proin interdum risus arcu, et aliquet risus mattis tincidunt. Duis erat ligula, iaculis eu aliquet non.
+							| Vi jobber primært mot bedrifter, organisasjoner og institusjoner, men tar også oppdrag fra private. I tillegg ønsker også vi å samarbeide
+							| med gründere og nyetablerte bedrifter som trenger hjelp med det tekniske og det visuelle rundt selskapet. Er du en gründer som skal eller nettopp har startet egen virksomhet?
+							| Ikke nøl med å ta kontakt for en uforpliktet samtale.
 	
 	section#projects
 		h2 HVA VI HAR <span style="color: #f1a32c;">JOBBET</span> MED.
@@ -129,7 +131,7 @@ block content
 
 	section#contact
 		.container
-			h2 JOBBE MED OSS?
+			h2 JOBBE MED <span style="color: #f1a32c;">OSS</span>?
 			.form-container.center-block
 				form(action="https://formspree.io/rina.andriana@outlook.com" method="POST")
 					ul
