--- a/src/sass/partials/_default.scss
+++ b/src/sass/partials/_default.scss
@@ -16,11 +16,15 @@ body {
     }
 }
 
+header {
+    border-bottom: 20px solid $primary-color;
+}
+
 .icons {
     background-color: $primary-color;
     padding-top: 25px;
     .content {
-        height: 320px;
+        height: 350px;
         position: relative;
         overflow: hidden;
         background-color: $background-color;
@@ -64,17 +68,17 @@ body {
         background-color: $primary-color;
         .inner {
             span {
-                @include transformY(-80px);
+                @include transformY(-120px);
             }
         }
         .toggle {
-            @include transformY(-20%);
+            @include transformY(-55%);
         }
     }
 }
 
 #about-us {
-    margin-bottom: 70px;
+    padding: 50px 0;
 }
 
 #grunder {
@@ -87,9 +91,12 @@ body {
 }
 
 #projects {
+    padding: 50px 0;
+
     h2 {
         margin-bottom: 25px;
     }
+
     .image-container {
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
         margin-bottom: 30px;
@@ -129,7 +136,7 @@ body {
 }
 
 #contact {
-    margin: 100px 0;
+    padding: 50px 0;
     .form-container {
         width: 70%;
 
