--- a/src/sass/partials/_responsive-sm-min.scss
+++ b/src/sass/partials/_responsive-sm-min.scss
@@ -30,10 +30,6 @@
         padding: 0;
     }
 
-    #services .icons {
-        border-top: 15px solid $primary-color;
-    }
-
     #about-us {
         margin: 30px 0 0;
         .text-block {
@@ -60,5 +56,22 @@
         height: 250px;
         text-align: center;
         color: #fff;
+    }
+
+    .icons .content:hover,.icons .active-info {
+        .inner {
+            span {
+                @include transformY(-100px);
+            }
+        }
+        .toggle {
+            @include transformY(-35%);
+        }
+    }
 }
+
+@media (min-width: $screen-md-min) and (max-width: $screen-lg-min) {
+    .responsive-text {
+        font-size: 1.2em !important;
+    }
 }
