--- a/views/index.pug
+++ b/views/index.pug
@@ -20,19 +20,19 @@ block content
 							.inner
 								.mac-icon
 								span WEBUTVIKLING
-							span.toggle En webside er idag et av de viktigste verktøyene for å markedsføre din virksomhet. Vi hjelper deg med å lage en god og informativ webside til din bedrift.
+							span.toggle.responsive-text En webside er i dag et av de viktigste verktøyene for å markedsføre din virksomhet. Vi hjelper deg med å lage en god og informativ webside til din bedrift.
 					.col-md-3.col-sm-6.no-padding
 						.content.toggle-info
 							.inner
 								.design-icon
 								span DESIGN
-							span.toggle Vi er opptatt av detaljer, og vi legger stor vekt på design og estetikk. Det er viktig at en webside ser bra ut for å tiltrekke seg flest mulig kunder.
+							span.toggle.responsive-text Vi er opptatt av detaljer, og vi legger stor vekt på design og estetikk. Det er viktig at en webside ser bra ut for å tiltrekke seg flest mulig kunder.
 					.col-md-3.col-sm-6.no-padding
 						.content.toggle-info
 							.inner
 								.system-icon
 								span WEBAPPLIKASJONER
-							span.toggle I tillegg til websider påtar vi oss også større utviklingsprosjekter. Webapplikasjoner er websider som har noe mer funksjon enn bare informasjon.
+							span.toggle.responsive-text I tillegg til websider påtar vi oss også større prosjekter. Webapplikasjoner er websider som har noe mer funksjon enn bare informasjon.
 					
 				.row
 					.col-md-3.col-sm-6.no-padding
@@ -40,7 +40,7 @@ block content
 							.inner
 								.search-icon
 								span SEO
-							span.toggle Vi søkemotoroptimaliserer websiden din, slik at du oppnår høyerer rangering på Google og andre søkemotorer. 
+							span.toggle Vi søkemotoroptimaliserer din webside, slik at du oppnår høyere rangering på Google og andre søkemotorer. 
 
 					.col-md-3.col-sm-6.no-padding
 						.content.toggle-info
@@ -53,13 +53,13 @@ block content
 							.inner
 								.responsive-icon
 								span RESPONSIVT DESIGN
-							span.toggle En responsiv webside er en side som tilpasser seg automatisk etter skjermstørrelsen, slik at den ser og føles kjent ut uansett enhet.
+							span.toggle.responsive-text En responsiv webside er en side som tilpasser seg automatisk etter skjermstørrelsen, slik at den ser og føles kjent ut uansett enhet.
 					.col-md-3.col-sm-6.no-padding
 						.content.toggle-info
 							.inner
 								.tool-icon
 								span KVALITET
-							span.toggle Vi gjør alltid vårt ytterste for å levere et produkt med høy kvalitet. I utvikle noe som gir verdi for kunden er noe vi setter høyt er i Raintech.
+							span.toggle.responsive-text Vi gjør alltid vårt ytterste for å levere et produkt med høy kvalitet. Å utvikle noe som gir verdi for kunden er noe vi setter høyt her i Raintech.
 
 	#hero2.intersection
 		.overlay
@@ -70,7 +70,7 @@ block content
 		.container-fluid
 			.text-block
 				h2.text-header Er du en <span style="color: #f1a32c;">gründer</span>?
-				p.text-content Har du en <span style="color: #f1a32c;">forretnindsidée</span> som du har lyst til å realisere? Vi hjelper deg!
+				p.text-content Har du en <span style="color: #f1a32c;">forretningsidé</span> som du har lyst til å realisere? Vi hjelper deg!
 			.icons.row
 				.col-md-4.col-sm-4.no-padding
 					.content.toggle-info
@@ -84,13 +84,13 @@ block content
 						.inner
 							.price-icon
 							span GRÜNDERVENNLIG PRIS
-						span.toggle Vi vet at gründere ikke er de med best råd. Vi har derfor en gründervennlig pris som gjør at du kan investere pengene videre i selskapet.
+						span.toggle Vi vet at gründere ikke er de med best råd i starten. Vi har derfor en gründervennlig pris som gjør at du kan investere pengene andre steder i selskapet.
 				.col-md-4.col-sm-4.no-padding
 					.content.toggle-info
 						.inner
 							.clock-icon
 							span VIDEREUTVIKLING
-						span.toggle Har du testet konseptet i markedet og har lyst til å videreutvikle prototypen? Ta kontakt så får vi diskutert veien videre. Vi bistår med både det tekniske og det visuellet rundt konseptet.
+						span.toggle Har du testet konseptet i markedet og har lyst til å videreutvikle prototypen? Ta kontakt så får vi diskutert veien videre. Vi bistår med både det tekniske og det visuelle rundt konseptet.
 
 	#hero3.intersection
 		.overlay
@@ -131,9 +131,9 @@ block content
 
 	section#contact
 		.container
-			h2 JOBBE MED <span style="color: #f1a32c;">OSS</span>?
+			h2 JOBBE MED <span style="color: #f1a32c;">OSS?</span>
 			.form-container.center-block
-				form(action="https://formspree.io/rina.andriana@outlook.com" method="POST")
+				form(action="https://formspree.io/post@raintech.no" method="POST")
 					ul
 						li: input(type="text" name="name" placeholder="Navn" required)
 						li: input(type="email" name="_replyto" placeholder="Epost" required)
