--- a/views/layouts/footer.pug
+++ b/views/layouts/footer.pug
@@ -4,7 +4,7 @@ footer.footer
         .social-media
             ul
                 li: a(href="http://www.facebook.com/raintechnorway"): img(src="icons/facebook.svg")
-                li: a(href="http://www.instagram.com"): img(src="icons/instagram.svg")
+                li: a(href="http://www.instagram.com/raintechnorway/"): img(src="icons/instagram.svg")
                 li: a(href="http://www.linkedin.com"): img(src="icons/linkedin.svg")
                 //li: a(href="http://www.facebook.com"): img(src="icons/snapchat.svg")
         .copyright
