changed some text

--- a/views/index.pug
+++ b/views/index.pug
@@ -90,7 +90,7 @@ block content
 						.inner
 							.clock-icon
 							span VIDEREUTVIKLING
-						span.toggle Har du testet konseptet i markedet og har lyst til å videreutvikle prototypen? Ta kontakt så får vi diskutert veien videre. Vi bistår med både det tekniske og det visuelle rundt konseptet.
+						span.toggle Har du testet konseptet i markedet og har lyst til å videreutvikle prototypen? Ta kontakt så kan vi diskutere veien videre. Vi bistår med både det tekniske og det visuelle rundt konseptet.
 
 	#hero3.intersection
 		.overlay
