--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -6023,6 +6023,9 @@ header {
   margin-left: auto;
   margin-right: auto; }
 
+.element-visible {
+  visibility: visible; }
+
 #navigation.affix {
   background-color: rgba(255, 255, 255, 0.9); }
   #navigation.affix .brand {
