--- a/src/sass/partials/_background.scss
+++ b/src/sass/partials/_background.scss
@@ -23,7 +23,7 @@
         left: 0;
         right: 0;
         margin: auto;
-        visibility: hidden;
+        //visibility: hidden;
     }
 
     .overlay {
